objects/Account_Measures__c.object
<CustomObject>
    <fields>
        <fullName>Account_Forecast__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Forecast</label>
        <referenceTo>Account_Forecast__c</referenceTo>
        <relationshipLabel>Account_Measures</relationshipLabel>
        <relationshipName>Account_Measures</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Number__c</fullName>
        <label>Account Number</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Month_0__c</fullName>
        <label>Month 0</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Month_10__c</fullName>
        <label>Month 10</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Month_11__c</fullName>
        <label>Month 11</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Previous_Month_1__c</fullName>
        <description>Month-1</description>
        <label>Previous Month 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Previous_Month_2__c</fullName>
        <description>Month-2</description>
        <label>Previous Month 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Previous_Month_3__c</fullName>
        <description>Month-3</description>
        <label>Previous Month 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sum_of_Total_Months__c</fullName>
        <formula>Month_0__c + Month_1__c+ Month_2__c +Month_3__c+ Month_4__c +Month_5__c +Month_6__c +Month_7__c+Month_8__c + Month_9__c +Month_10__c +Month_11__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sum of Total Months</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Backlog</fullName>
                </value>
                <value>
                    <fullName>Statistical</fullName>
                </value>
                <value>
                    <fullName>Consensus</fullName>
                </value>
                <value>
                    <fullName>Billing (historic)</fullName>
                </value>
                <value>
                    <fullName>Schedule Agreement</fullName>
                </value>
                <value>
                    <fullName>Booking (historic)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Account Measures</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Account_Forecast__c</columns>
        <columns>Account_Number__c</columns>
        <columns>Sum_of_Total_Months__c</columns>
        <columns>Type__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AM-{00000000}</displayFormat>
        <label>Account Measures Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Measures</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>